salesforce/force-app/main/default/objects/Order_Status_Change__e/Order_Status_Change__e.object-meta.xml
<CustomObject>
    <description>Published when an Order shipping status changes. Subscribers (e.g., SF Flows) use this to trigger MC Advanced transactional journeys (ship confirm, delivery notification).</description>
    <label>Order Status Change</label>
    <pluralLabel>Order Status Changes</pluralLabel>
</CustomObject>