salesforce/force-app/main/default/objects/Order_Status_Change__e/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <description>Timestamp when the status change occurred</description>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>