salesforce/force-app/main/default/objects/Order_Status_Change__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>New shipping status (e.g., Shipped, Delivered)</description>
    <label>New Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>