salesforce/force-app/main/default/objects/Order_Status_Change__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Salesforce Order record ID</description>
    <label>Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>